tests/stylecheck/t20397_2.nim
discard """
  errormsg: "'a_b' should be: 'aB'"
  matrix: "--styleCheck:error"
"""

var a_b = 1
discard a_b